--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": "^7.4|^8.0",
         "firebase/php-jwt": "^5.2",
         "illuminate/mail": "^8.19",
-        "laravel/lumen-framework": "^8.0"
+        "laravel/lumen-framework": "^8.0",
+        "league/flysystem": "1.1.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
